--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css?version=2" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Mi Resumen - v4.7.0
