--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Nicolas V</h1>
+      <h1>Nicolas VK</h1>
       <p>I'm a <span class="typed" data-typed-items="Web Designer, Programmer, Blockhead, 2nd Year Informatics Engineer"></span></p>
       <div class="social-links">  
         <a href="https://twitter.com/Nipicoco" class="twitter">Twitter<i class="bx bxl-twitter"></i></a>
