--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -48,6 +49,7 @@
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="blue-playlist/index.html" class="nav-link scrollto"><i class="bx bx-music"></i> <span>Music</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -499,6 +501,7 @@
         Designed by Nipicoco <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
+    
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
@@ -514,6 +517,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/amplitudejs@{{version-number}}/dist/amplitude.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
